src/main/k8s/01_namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grchronis-dev
