src/main/k8s/04_app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintestq-app
  namespace: grchronis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintestq-app
  template:
    metadata:
      labels:
        app: fintestq-app
    spec:
      containers:
        - name: fintestq-app
          image: 1171821/fintestq-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fintestq-app
  namespace: grchronis-dev
spec:
  selector:
    app: fintestq-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
# OpenShift config to expose the fintestq-app
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fintestq-app
  namespace: grchronis-dev
spec:
#  host: fintestq-app-grchronis-dev.apps.sandbox.example.openshift.com
  to:
    kind: Service
    name: fintestq-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
